[gd_scene load_steps=12 format=3 uid="uid://b3kobiipq2jbo"]

[ext_resource type="Script" path="res://components/custom_window_bar/custom_window_bar.gd" id="1_5unlh"]
[ext_resource type="Script" path="res://components/custom_window_bar/window_resize_component.gd" id="2_4gkye"]
[ext_resource type="Script" path="res://components/custom_window_bar/window_state_component.gd" id="2_hnrtg"]
[ext_resource type="Script" path="res://components/custom_window_bar/window_drag_component.gd" id="2_lons0"]
[ext_resource type="Texture2D" uid="uid://cv3lk1pbm7kla" path="res://resource/icons/Boghma.png" id="3_eh4sk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_irl2v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o88xo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sclpu"]
draw_center = false
border_width_bottom = 4
border_color = Color(0.303558, 0.552087, 0.792969, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_calml"]

[sub_resource type="Theme" id="Theme_nu6y7"]
Button/colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
Button/colors/font_disabled_color = Color(0.87451, 0.87451, 0.87451, 1)
Button/styles/disabled = SubResource("StyleBoxEmpty_irl2v")
Button/styles/focus = SubResource("StyleBoxEmpty_o88xo")
Button/styles/hover = SubResource("StyleBoxFlat_sclpu")
Button/styles/normal = SubResource("StyleBoxEmpty_calml")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ptbxd"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[node name="CustomWindowBar" type="PanelContainer"]
clip_contents = true
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2
theme = SubResource("Theme_nu6y7")
theme_override_styles/panel = SubResource("StyleBoxFlat_ptbxd")
script = ExtResource("1_5unlh")

[node name="WindowResizeComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_4gkye")
min_size = Vector2i(300, 100)

[node name="WindowStateComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_hnrtg")

[node name="WindowDragComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_lons0")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 16

[node name="TextureRectWindowIcon" type="TextureRect" parent="HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("3_eh4sk")
expand_mode = 1

[node name="LabelWindowTitle" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Boghma"
clip_text = true

[node name="BtnMinimizeWindow" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
text = "---"

[node name="BtnMaxsimizeWindow" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
text = "O"

[node name="BtnCloseWindow" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
text = "X"
